dataset1235/2025-2/1153765216/users/2249779960/executions/2747719322_2132966528.log
== SUBMISSION (2025-08-21 17:51:40)
-- CODE: 
nome = input("Digite seu nome completo: ")
print(nome.upper())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Digite seu nome completo: DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Digite seu nome completo: MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Digite seu nome completo: SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Digite seu nome completo: BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Digite seu nome completo: HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Digite seu nome completo: PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 13:28:39)
-- CODE: 
nome = input("Digite seu nome completo: ")print(nome.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
File "XXXX", line 1
    nome = input("Digite seu nome completo: ")print(nome.upper())
                                              ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
File "XXXX", line 1
    nome = input("Digite seu nome completo: ")print(nome.upper())
                                              ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
File "XXXX", line 1
    nome = input("Digite seu nome completo: ")print(nome.upper())
                                              ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
File "XXXX", line 1
    nome = input("Digite seu nome completo: ")print(nome.upper())
                                              ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
File "XXXX", line 1
    nome = input("Digite seu nome completo: ")print(nome.upper())
                                              ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
File "XXXX", line 1
    nome = input("Digite seu nome completo: ")print(nome.upper())
                                              ^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 13:29:01)
-- CODE: 
nome = input("Digite seu nome completo: ")
print(nome.upper())
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Digite seu nome completo: DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Digite seu nome completo: MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Digite seu nome completo: SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Digite seu nome completo: BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Digite seu nome completo: HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Digite seu nome completo: PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
